<resources>
    <string name="app_name">My Application</string>
    <string name="price_goes_here">Price goes here</string>
    <string name="year_goes_here">Year goes here</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="heading">Welcome to your Garage</string>
    <string name="continueButton">Continue</string>
    <string name="cars">Cars</string>
    <string name="bikes">Bikes</string>
    <string name="other">Other</string>
    <string name="bikeUrl1">https://www.leehondacentre.com/product-page/2020-kawasaki-z1000sx</string>
    <string name="bikeUrl2">https://www.leehondacentre.com/product-page/harley-davidson-115th-anniversary-flhcs-heritage-114-limited-edition</string>
    <string name="bikeUrl3">https://www.leehondacentre.com/product-page/2020-suzuki-dl1050-v-strom</string>
    <string name="bikeUrl4">https://www.leehondacentre.com/product-page/2019-triumph-1200-speed-twin</string>
    <string name="bikeUrl5">https://www.leehondacentre.com/product-page/2019-suzuki-dl1000-v-strom</string>
    <string name="bikeUrl6">https://www.leehondacentre.com/product-page/2016-triumph-tiger-800-xrx</string>
    <string name="bikeUrl7">https://www.leehondacentre.com/product-page/honda-africa-twin-crf1100-d2-adventure-sports</string>
    <string name="bikeUrl8">https://www.leehondacentre.com/product-page/2023-yamaha-mt-10</string>
    <string name="bikeUrl9">https://www.leehondacentre.com/product-page/2023-kawasaki-z1000sx-ninja</string>
    <string name="bikeUrl10">https://www.leehondacentre.com/product-page/2022-honda-cbr500r</string>
    <string name="bikeUrl11">https://www.leehondacentre.com/product-page/2023-honda-adv350</string>
    <string name="bikeUrl12">https://www.leehondacentre.com/product–page/2007–honda–deauville–nt700–1</string>
    <string name="bikeUrl13">https://www.leehondacentre.com/product-page/2018-yamaha-mt-07a</string>
    <string name="bikeUrl14">https://www.leehondacentre.com/product-page/2021-ducati-supersport-s</string>
    <string name="bikeUrl15">https://www.leehondacentre.com/product-page/2005-suzuki-sv650</string>
    <string name="carUrl1">https://www.blackwatermotors.ie/used-cars/16543755-nissan-juke-1.5dsl%20110bhp%20sv/</string>
    <string name="carUrl2">https://www.blackwatermotors.ie/used-cars/16710076-toyota-aygo-1.0%2068bhp%20x-play/</string>
    <string name="carUrl3">https://www.blackwatermotors.ie/used-cars/16041045-nissan-note-1.2%2080bhp%20sv%20sport%204dr/</string>
    <string name="carUrl4">https://www.blackwatermotors.ie/used-cars/16878810-volkswagen-up-1.0%2075bhp%205dr%20automatic/</string>
    <string name="carUrl5">https://www.blackwatermotors.ie/used-cars/16099658-renault-captur-1.5dci%2090bhp%20intense/</string>
    <string name="carUrl6">https://www.blackwatermotors.ie/used-cars/16633853-ford-fiesta-1.25%2060bhp%20zetec/</string>
    <string name="carUrl7">https://www.blackwatermotors.ie/used–cars/16250032–fiat–500–1.2%2069bhp%20pop/</string>
    <string name="carUrl8">https://www.blackwatermotors.ie/used-cars/16244545-opel-corsa-1.4%2090bhp%20sc/?finances%5Bdeposit%5D=2748.75&amp;finances%5BproductName%5D=Hire%20Purchase&amp;finances%5Bterm%5D=60&amp;finances%5BproductType%5D=Hire%20Purchase&amp;finances%5BannualMileage%5D=10000&amp;finances%5Bdescription%5D=</string>
    <string name="carUrl9">https://www.blackwatermotors.ie/used–cars/14498076–hyundai–ix35–2.0%20diesel%20136hp%20executive%204%20wheel%20drive%20automatic/</string>
    <string name="carUrl10">https://www.blackwatermotors.ie/used–cars/14498076–hyundai–ix35–2.0%20diesel%20136hp%20executive%204%20wheel%20drive%20automatic/</string>
    <string name="carUrl11">https://www.blackwatermotors.ie/used-cars/16633854-ford-focus-1.6tdci%2095bhp%20style/</string>
    <string name="carUrl12">https://www.blackwatermotors.ie/used-cars/16396175-ford-fiesta-1.5d%2075bhp%20mca%20titanium%205dr/</string>
    <string name="carUrl13">https://www.blackwatermotors.ie/used-cars/16305217-kia-venga-petrol%201.4l/?finances%5Bdeposit%5D=3797.5&amp;finances%5BproductName%5D=Hire%20Purchase&amp;finances%5Bterm%5D=60&amp;finances%5BproductType%5D=Hire%20Purchase&amp;finances%5BannualMileage%5D=10000&amp;finances%5Bdescription%5D=</string>
    <string name="carUrl14">https://www.blackwatermotors.ie/used-cars/16359195-volkswagen-polo-1.0%2060bhp%205dr%20trendline%20with%20technology%20upgrade/</string>
    <string name="carUrl15">https://www.blackwatermotors.ie/used-cars/16242159-volkswagen-polo-1.0%2060bhp%205dr%20trendline%20with%20technology%20upgrade/</string>
    <string name="otherUrl1">https://www.donedeal.ie/carparts-for-sale/toyota-altezza-v2-front-bumper/35426163</string>
    <string name="otherUrl2">https://www.donedeal.ie/carparts-for-sale/clutch-dual-mass-flywheel-kit-1-6-1-9-tdi/22380542</string>
    <string name="otherUrl3">https://www.donedeal.ie/carparts-for-sale/formula-atlantic-4age-engine/35345593</string>
    <string name="otherUrl4">https://www.donedeal.ie/carparts-for-sale/volkswagen-golf-polo-passat-tiguan-android-carplay/35203877</string>
    <string name="otherUrl5">https://www.donedeal.ie/carparts-for-sale/sportchip-ecu-remapping-and-turbochargers/29331225</string>
    <string name="otherUrl6">https://www.donedeal.ie/carparts-for-sale/mitsubshi-outlander-front-end/35199352</string>
    <string name="otherUrl7">https://www.donedeal.ie/carparts-for-sale/mazda-mx5-nc-mk3-for-breaking/32318607</string>
    <string name="otherUrl8">https://www.donedeal.ie/motorbikeextras-for-sale/motorbike-gear/35003423</string>
    <string name="otherUrl9">https://www.donedeal.ie/motorbikeextras-for-sale/akrapovic-exhaust-tenere-700-/35425585</string>
    <string name="otherUrl10">https://www.donedeal.ie/motorbikeextras-for-sale/s1000-rr-parts/35423068</string>
    <string name="otherUrl11">https://www.donedeal.ie/motorbikeextras-for-sale/x-lite-x-803-rs-ultra-carbon-helmet-/35395319</string>
    <string name="otherUrl12">https://www.donedeal.ie/motorbikeextras-for-sale/motorcycle-jacket-pants/35360195</string>
    <string name="otherUrl13">https://www.donedeal.ie/motorbikeextras-for-sale/kawasaki-zx10-r-wheels/34376078</string>
    <string name="otherUrl14">https://www.donedeal.ie/motorbikeextras-for-sale/harley-davidson-wind-deflectors/35189278</string>
    <string name="otherUrl15">https://www.donedeal.ie/motorbikeextras-for-sale/motorcycle-trailer/35357704</string>
    <string name="view_ad">View Ad</string>
    <string name="go_back">Go Back</string>
    <string name="home">Home</string>
    <string name="sort_by_price">Sort by price</string>
</resources>